[package]
name = "time-c"
version = "1.0.0-alpha.2"
edition = "2018"
description = "Wrapper for time functions of C standard library"
readme = "README.md"
repository = "https://github.com/DoumanAsh/time-c"
license = "BSL-1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]
keywords = ["ffi", "bindings", "operating", "system", "time"]
categories = ["external-ffi-bindings", "no-std", "os"]
